Added model likelihood function and updated warnings/control
Updates:
1. Added a divid by 0 warning for when PPFDtotal is 0 and model 2 or 4 are used
2. Added an r function that runs the model likelihood called model_likelihood
3. Added a control object to fit_mod that is used in rstan:stan. This can be for increasing adapt_delta and treedepth for stan.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(arsatfc)
 export(create_dataList)
 export(extract_values)
 export(fitmod)
+export(model_likelihood)
 export(n2satfc)
 export(osat)
 export(plotmod)
